tests/cases/ownership/ok/ownership-array-element-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume(value: own i64) -> i64 {
  drop value;
  return 6;
}

fn main() -> i64 {
  var values: [own i64, 2] = [make_owned(1), make_owned(2)];
  let first = values[0];
  let score = consume(first);
  values[0] = make_owned(3);
  drop values;
  return score;
}
