tests/cases/ownership/errors/ownership-array-dynamic-element-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let values: [own i64, 2] = [make_owned(1), make_owned(2)];
  let index = 0;
  let first = values[index];
  drop first;
  drop values;
  return 0;
}
